<resources>
    <string name="app_name">Technovators Diary</string>
    <string name="welcome">Welcome to</string>
    <string name="Continue">Continue</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signup_message">Don\'t have an account?</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="ReviewDetails">Review Details</string>
    <string name="cnfirstname">First Name:</string>
    <string name="cnmiddlename">Middle Name:</string>
    <string name="cnlastname">Last Name:</string>
    <string name="cnemail">Email:</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="let">Let\'s</string>
    <string name="create">Create</string>
    <string name="your">Your Account</string>
    <string name="About">About</string>
    <string name="Developer">Developer</string>
    <string name="Carl">Carl</string>
    <string name="Marlo">Marlo</string>
    <string name="Dom">Dom</string>
    <string name="mainentryhint">Enter your main entry here</string>
    <string name="profile">My Profile</string>
    <string name="add">Add</string>
    <string name="empty_notes">Your diary is waiting. Add your first memory</string>
    <string name="about">About Developers</string>
    <string name="logout">Log Out</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="carlRole">Front End</string>
    <string name="DomMarloRole"><![CDATA[Backend & Database]]></string>
</resources>