<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".About">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title: "About" label -->
        <TextView
            android:id="@+id/tvMeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/About"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Back button image -->
        <ImageView
            android:id="@+id/btnback"
            android:layout_width="59dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- App name -->
        <TextView
            android:id="@+id/tvTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/adlam_display"
            android:text="@string/app_name"
            android:textColor="@color/c2"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tvMeet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- "Developers" heading -->
        <TextView
            android:id="@+id/tvDevelopers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/Developer"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvTeam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Carl's image -->
        <ImageView
            android:id="@+id/carlIV"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/carl"
            app:layout_constraintEnd_toStartOf="@+id/marloIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDevelopers"
            app:layout_constraintWidth_percent="0.45" />

        <!-- Marlo's image -->
        <ImageView
            android:id="@+id/marloIV"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/marlo"
            app:layout_constraintTop_toTopOf="@id/carlIV"
            app:layout_constraintStart_toEndOf="@id/carlIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <!-- Carl's name -->
        <TextView
            android:id="@+id/tvCarl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/Carl"
            android:textColor="@color/c2"
            app:layout_constraintTop_toBottomOf="@id/carlIV"
            app:layout_constraintStart_toStartOf="@id/carlIV"
            app:layout_constraintEnd_toEndOf="@id/carlIV" />

        <!-- Marlo's name -->
        <TextView
            android:id="@+id/tvMarlo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/Marlo"
            android:textColor="@color/c2"
            app:layout_constraintTop_toBottomOf="@id/marloIV"
            app:layout_constraintStart_toStartOf="@id/marloIV"
            app:layout_constraintEnd_toEndOf="@id/marloIV" />

        <!-- Carl's role description -->
        <TextView
            android:id="@+id/tvCarlDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carlRole"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvCarl"
            app:layout_constraintStart_toStartOf="@id/tvCarl"
            app:layout_constraintEnd_toEndOf="@id/tvCarl" />

        <!-- Marlo's role description -->
        <TextView
            android:id="@+id/tvMarloDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DomMarloRole"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvMarlo"
            app:layout_constraintStart_toStartOf="@id/tvMarlo"
            app:layout_constraintEnd_toEndOf="@id/tvMarlo" />

        <!-- Dominic's image -->
        <ImageView
            android:id="@+id/domIV"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dominic"
            app:layout_constraintTop_toBottomOf="@id/tvMarloDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <!-- Dominic's name -->
        <TextView
            android:id="@+id/tvCarl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alexandria_semibold"
            android:text="@string/Dom"
            android:textColor="@color/c2"
            app:layout_constraintTop_toBottomOf="@id/domIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Dominic's role description -->
        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DomMarloRole"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvCarl2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
